--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,15 @@
-version: "3.9"
+version: "2.32.4"
 services:
   database:
     image: postgres:latest
     restart: always
     ports:
       - 5432:5432
-    container_name: ktor-arrow-example-database
+    container_name: postgres
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=ktor-arrow-example-database
+      - POSTGRES_DB=postgres
+#    volumes:
+#      - ./postgres/data:/var/lib/postgresql/data
+#      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
