--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ ktor-version = "3.0.3"
 hikari = "6.2.1"
 postgresql = "42.7.5"
 mockk = "1.13.16"
+logback = "1.4.11"
 
 [libraries]
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
@@ -27,6 +28,7 @@ testcontainers-postgresql = { module = "org.testcontainers:postgresql", version.
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
 postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
